[package]
name = "chained_tx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6"
clap = { version = "3.1.9", features = ["derive"] }
httpmock = "0.6"
hex = "0.4"
secp256k1 = { version = "0.20", features = ["recovery", "rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

ckb-sdk = { git = "https://github.com/xcshuan/ckb-sdk-rust.git" }
ckb-types = "=0.104.0"
ckb-dao-utils = "=0.104.0"
ckb-traits = "=0.104.0"
ckb-jsonrpc-types = "=0.104.0"
ckb-hash = "=0.104.0"
ckb-resource = "=0.104.0"
ckb-crypto = { version = "=0.104.0", features = ["secp"] }